--- a/ECommerce/ECommerce.MVC/appsettings.json
+++ b/ECommerce/ECommerce.MVC/appsettings.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=Beril.0670;Server=localhost;Port=5432;Database=Mywebapp;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=12345;Server=localhost;Port=5432;Database=ECommerce;Integrated Security=true;Pooling=true;"
   },
   "MailSettings": {
     "DisplayName": "IssInfo",
