--- a/ECommerce/ECommerce.MVC/ECommerce.MVC.csproj
+++ b/ECommerce/ECommerce.MVC/ECommerce.MVC.csproj
@@ -149,6 +149,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
         <PrivateAssets>all</PrivateAssets>
